--- a/_config.yml
+++ b/_config.yml
@@ -117,11 +117,11 @@ syntax-highlight: True
 
 events:
   - image: "/img/timeline/spidertocat.png"
-    date: "September 2013 - Today"
-    description: "Saving the neighborhood!"
+    date: "January 1995 - Today"
+    description: "Living"
   - image: "/img/timeline/baracktocat.jpg"
-    date: "September 2007 - August 2013"
-    description: "Started coding"
+    date: "September 2014 - Today"
+    description: "Live to code and code to live(?)!"
 
 # First image of the Timeline
 
